--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
   "functions": {
     "api/index.ts": {
       "memory": 1024,
-      "maxDuration": 30,
-      "includeFiles": "server/**,shared/**"
+      "maxDuration": 30
     }
   },
   "rewrites": [
