--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
+
+# Neon PostgreSQL Database
+DATABASE_URL=postgresql://neondb_owner:npg_GqrWVSngRo30@ep-mute-frost-ae9v6dd5-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
