--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm run build:client",
+  "buildCommand": "pnpm run build",
   "outputDirectory": "dist/spa",
   "functions": {
     "api/index.ts": {
