feat: add migration script for express delivery columns in delivery_zones

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
+    "db:migrate": "npx tsx server/db/migrate-express-delivery.ts",
     "cap:sync": "npx cap sync",
     "cap:open:ios": "npx cap open ios",
     "cap:open:android": "npx cap open android",
