feat: add seed script for customers table to create test customer accounts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
     "db:migrate": "npx tsx server/db/migrate-express-delivery.ts",
+    "db:seed-customers": "npx tsx server/db/seed-customers.ts",
     "cap:sync": "npx cap sync",
     "cap:open:ios": "npx cap open ios",
     "cap:open:android": "npx cap open android",
