--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.45.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.1.5",
     "leaflet": "^1.9.4",
     "react-leaflet": "^5.0.0",
     "zod": "^3.25.76"
