--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,37 @@
 {
   "buildCommand": "pnpm run build",
   "outputDirectory": "dist/spa",
+  "regions": ["iad1"],
   "functions": {
     "api/index.ts": {
       "memory": 1024,
-      "maxDuration": 30
+      "maxDuration": 60,
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api/index?path=:path*"
+      "destination": "/api?path=:path*"
     },
     {
       "source": "/((?!api/).*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, s-maxage=3600"
+        }
+      ]
     }
   ]
 }
