--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
   "functions": {
     "api/index.ts": {
       "memory": 1024,
-      "maxDuration": 60,
-      "maxBodyLength": 52428800
+      "maxDuration": 60
     }
   },
   "rewrites": [
