--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ PING_MESSAGE="ping pong"
 
 # Neon PostgreSQL Database
 DATABASE_URL=postgresql://neondb_owner:npg_GqrWVSngRo30@ep-mute-frost-ae9v6dd5-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
+
+# Alternative connections
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_GqrWVSngRo30@ep-mute-frost-ae9v6dd5.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
+PGHOST=ep-mute-frost-ae9v6dd5-pooler.c-2.us-east-2.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_GqrWVSngRo30
