Refresh and Scroll updates

--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
 
 # Neon PostgreSQL Database
-DATABASE_URL=postgresql://neondb_owner:npg_GqrWVSngRo30@ep-mute-frost-ae9v6dd5-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:npg_BFwLbQkA18jd@ep-icy-cell-aheio2vv-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
 
 # Alternative connections
-DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_GqrWVSngRo30@ep-mute-frost-ae9v6dd5.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
-PGHOST=ep-mute-frost-ae9v6dd5-pooler.c-2.us-east-2.aws.neon.tech
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_BFwLbQkA18jd@ep-icy-cell-aheio2vv.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
+PGHOST=ep-icy-cell-aheio2vv-pooler.c-3.us-east-1.aws.neon.tech
 PGUSER=neondb_owner
 PGDATABASE=neondb
-PGPASSWORD=npg_GqrWVSngRo30
+PGPASSWORD=npg_BFwLbQkA18jd
