--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "@capacitor/keyboard": "^8.0.0",
     "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
-    "@neondatabase/serverless": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.45.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
     "leaflet": "^1.9.4",
+    "mysql2": "^3.16.3",
     "react-leaflet": "^5.0.0",
     "zod": "^3.25.76"
   },
