--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
+    "build:netlify": "npm run build:client && npm run build:functions",
+    "build:functions": "esbuild netlify/functions/api.ts --bundle --platform=node --target=node18 --outfile=netlify/functions/api.js --format=cjs",
     "start": "node dist/server/node-build.mjs",
+    "netlify:dev": "netlify dev",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
@@ -41,6 +44,8 @@
     "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@netlify/functions": "^2.8.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.45.1",
@@ -48,7 +53,9 @@
     "express-rate-limit": "^7.1.5",
     "leaflet": "^1.9.4",
     "mysql2": "^3.16.3",
+    "postgres": "^3.4.8",
     "react-leaflet": "^5.0.0",
+    "serverless-http": "^3.2.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -85,6 +92,7 @@
     "@swc/core": "^1.13.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/google.maps": "^3.58.1",
@@ -96,16 +104,19 @@
     "@vercel/node": "^5.5.16",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "autoprefixer": "^10.4.21",
+    "cardinal": "^2.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.8",
     "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.25.0",
     "framer-motion": "^12.23.12",
     "globals": "^16.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
+    "netlify-cli": "^17.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
