--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
-    "db:migrate": "npx tsx server/db/migrate.ts",
+    "db:migrate": "npx tsx scripts/migrate-to-neon.ts",
     "cap:sync": "npx cap sync",
     "cap:open:ios": "npx cap open ios",
     "cap:open:android": "npx cap open android",
@@ -52,7 +52,6 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
     "leaflet": "^1.9.4",
-    "mysql2": "^3.16.3",
     "postgres": "^3.4.8",
     "react-leaflet": "^5.0.0",
     "serverless-http": "^3.2.0",
@@ -101,7 +100,6 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/three": "^0.176.0",
-    "@vercel/node": "^5.5.16",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "cardinal": "^2.1.1",
