--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
     "drizzle-orm": "^0.45.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
+    "i18next": "^25.8.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "postgres": "^3.4.8",
+    "react-i18next": "^16.5.4",
     "react-leaflet": "^5.0.0",
     "serverless-http": "^3.2.0",
     "zod": "^3.25.76"
