--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
     "server/**/*",
     "api/**/*",
     "shared/**/*",
+    "netlify/**/*",
     "vite.config.ts",
     "vite.config.server.ts"
   ],
